[tool.poetry]
name = "nscat"
version = "0.1.0"
description = "displays contents of a file substituting passwords and api keys with Xs"
authors = ["Ron Georgia <rong1611@gmail.com>"]
license = "BSD-3"

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
